--- a/src/components/menu/quizDetails.css
+++ b/src/components/menu/quizDetails.css
@@ -12,6 +12,12 @@
   padding: 5px;
 }
 
+.dictationType {
+  display: grid;
+  grid-template-columns: 5% 50% 45%;
+  background: #333;
+  margin: 2px;
+}
 .matchType {
   display: grid;
   grid-template-columns: 5% 30% 30% 30%;
