--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -1,4 +1,26 @@
 
+.ant-collapse {
+  padding: 5px;
+  background-color: transparent;
+}
+
+
+.ant-collapse-content {
+    background-color: DarkSlateBlue;
+}
+
+.ant-collapse-item {
+  /*border-radius: 10px;*/
+  border: 2px solid;
+  border-color: Gray;
+  margin: 10px;
+  background-color: DarkSlateGray;
+}
+
+.customQuizHeaderPara {
+  margin-bottom: 0px;
+}
+
 .landingContainer {
 
   display: grid;
@@ -128,6 +150,58 @@
   font-size: 20px;
 }
 
+.itemButton {
+  margin: 5px;
+  width: 300px;
+  height: 50px;
+  background-color:  DarkSlateGray;
+  color: Gainsboro;
+  font-size: 20px;
+}
+
+
+.lessonChoiceButton {
+  margin: 5px;
+  /*width: 300px;*/
+  /*height: 50px;*/
+  background-color:  transparent;
+  color: Gainsboro;
+  font-size: 14px;
+}
+
+.lessonChoiceButton:hover {
+  background-color:  DarkSlateGray;
+}
+
+.lessonChoiceButton:active {
+  background-color:  DarkSlateGray;
+}
+
+.lessonSelectedButton {
+  margin: 5px;
+  /*width: 300px;*/
+  /*height: 50px;*/
+  background-color:  DarkSlateGray;
+  color: Gainsboro;
+  font-size: 16px;
+}
+
+.lessonSelectedButton:hover {
+  background-color:  DarkSlateGray;
+}
+
+.lessonSelectedButton:active {
+  background-color:  DarkSlateGray;
+}
+
+.customizeButton {
+  margin: 5px;
+  width: 300px;
+  height: 50px;
+  background-color:  RoyalBlue;
+  color: LightCyan;
+  font-size: 20px;
+}
 
 .guestButton {
   margin: 10px;
