Signed-off-by: Prem Anand <prem2282@gmail.com>

--- a/src/components/questions/questionStyle.css
+++ b/src/components/questions/questionStyle.css
@@ -1,4 +1,65 @@
 
+
+.lettersDiv {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(45px, 1fr));
+  grid-gap: 5px;
+  background-color: transparent;;
+  padding: 10px;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+
+}
+
+
+.letterBoxNormal {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 2px 0;
+  margin-bottom: 0;
+  font-size: 25px;
+  border-radius: 10px;
+  font-weight: bolder;
+}
+
+.letterBoxHidden {
+  background-color: Gray;
+  color: Gold;
+  text-align: center;
+  padding: 2px 0;
+  margin-bottom: 0;
+  font-size: 25px;
+  border-radius: 10px;
+}
+
+.letterBoxChoice {
+  background-color: DimGray;
+  color: Gold;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 5px;
+  font-size: 20px;
+  border-radius: 8px;
+  font-weight: bolder;
+}
+
+
+.soundIconClass{
+    font-size: 60px;
+    margin-bottom: 0px;
+    color: Gray;
+}
+.sountText1Class{
+  margin-bottom: 0px;
+  color: Khaki;
+  font-size: 24px;
+}
+.sountText2Class{
+  margin-bottom: 0px;
+  color: Gray;
+}
+
 .buttonContainer {
   display: flex;
   align-items: center;
@@ -223,6 +284,23 @@
 
 }
 
+.dictContainter {
+  position: absolute;
+  top: 10%;
+  bottom: 0%;
+  display: grid;
+  grid-template-columns: 100%;
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  background-color: transparent;
+  background-position: center;
+  border-radius: 10px;
+  align-self: center;
+  justify-content: space-between;
+  align-items: center;
+  background-size: contain;
+}
 .countContainer {
   position: absolute;
   top: 0%;
@@ -240,6 +318,7 @@
   align-items: center;
   background-size: contain;
 }
+
 .dualButtonContainer {
   position: absolute;
   bottom: .5%;
@@ -283,9 +362,9 @@
 
 .questionContainer{
 
-  position: absolute;
+  /* position: absolute;
   top: 10%;
-  bottom: 0%;
+  bottom: 0%; */
   display: grid;
   grid-template-columns: 50% 50%;
   height: 90%;
@@ -343,6 +422,8 @@
     font-size: 30px;
     color: Khaki;
 }
+
+
 .questionBox {
   display: grid;
   grid-template-columns: 100%;
@@ -351,7 +432,7 @@
   font-weight:  normal;
   width: auto;
   font-style: normal;;
-  margin: 2rem;
+  margin: .5rem;
   padding: 5px;
   border-color: Aqua;
   border-radius: 5px;
@@ -519,13 +600,13 @@
   .answerBoxType1 {
     font-size: 18px;
     margin: .3em .3em .3em .3em ;
-    padding: 4%;
+    padding: 2%;
 
   }
   .answerBoxSel {
     font-size: 18px;
     margin: .3em .3em .3em .3em ;
-    padding: 4%;
+    padding: 2%;
   }
   .answerContainer{
     grid-template-columns: 90%;
@@ -537,6 +618,13 @@
   }
   .listTopContainer{
     grid-template-columns: 100%;
+  }
+
+  .submitButton{
+    height: 40px;
+    margin: 5px;
+    font-size: 24px;
+
   }
 
 }
@@ -577,5 +665,14 @@
 
 
 
+
+}
+
+@media screen and (orientation: landscape) {
+
+  .lettersDiv {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
 
 }
