changed questionContainer class

--- a/src/components/questions/questionStyle.css
+++ b/src/components/questions/questionStyle.css
@@ -362,9 +362,9 @@
 
 .questionContainer{
 
-  /* position: absolute;
+  position: absolute;
   top: 10%;
-  bottom: 0%; */
+  bottom: 0%;
   display: grid;
   grid-template-columns: 50% 50%;
   height: 90%;
